--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -24,19 +24,6 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
-// Initial configuration.
 @import 'skeleton.scss';
-
-// Global settings.
-@import 'variables.scss';
-
-// Mixins.
-@import 'mixins.scss';
-
-// Components.
-@import 'layout/index.scss';
-@import 'row/index.scss';
-@import 'column/index.scss';
-
-// Utilities.
-@import 'utils/index.scss';
+@import 'common/index.scss';
+@import 'core/index.scss';
