--- a/src/core/column/column.scss
+++ b/src/core/column/column.scss
@@ -1,43 +1,154 @@
-@import 'reusables.scss';
-
-@include column() {
+.#{$COLUMN} {
     flex: 1;
-    padding-bottom: $gutter-width;
-    padding-left: $half-gutter-width;
-    padding-right: $half-gutter-width;
-    padding-top: 0rem;
+    display: none;
 
-    // Generate base columns.
-    @for $i from 1 through $column-count {
-        &--#{$i} {
-            @include column-flex-width($i, $column-count);
+    /*
+     * -------------------------------------------------------------------------
+     * Visibility.
+     * -------------------------------------------------------------------------
+     */
+    &--visible {
+        display: block;
+    }
+
+    @each $label, $width in $viewport-min-widths {
+        @include viewport-min($label) {
+            &--#{$label}-visible {
+                display: block;
+            }
         }
     }
 
-    // Generate viewport-dependent columns.
+    /*
+     * -------------------------------------------------------------------------
+     * Column sizing.
+     * -------------------------------------------------------------------------
+     */
+    @for $i from 1 through $column-count {
+        &--#{$i} {
+            flex: 0 0 (($i / $column-count) * 100%);
+        }
+    }
+
     @each $label, $width in $viewport-min-widths {
         @for $i from 1 through $column-count {
             @include viewport-min($label) {
                 &--#{$label}-#{$i} {
-                    @include column-flex-width($i, $column-count);
+                    flex: 0 0 (($i / $column-count) * 100%);
                 }
             }
         }
     }
 
-    // Generate base column offsets.
-    @for $i from 1 through $column-count {
-        &--offset-#{$i} {
-            @include column-offset($i, $column-count);
+    /*
+     * -------------------------------------------------------------------------
+     * Named column sizing.
+     * -------------------------------------------------------------------------
+     */
+
+    $named-sizes: (
+        half: 50%,
+        quater: 25%,
+        third: (100% / 3),
+        three-quaters: (25% * 3),
+        two-thirds: ((100% / 3) * 2),
+    );
+
+    @each $name, $size in $named-sizes {
+        &--#{$name} {
+            flex: 0 0 $size;
         }
     }
 
-    // Generate viewport-dependent column offsets.
+    @each $label, $width in $viewport-min-widths {
+        @include viewport-min($label) {
+            @each $name, $size in $named-sizes {
+                &--#{$label}-#{$name} {
+                    flex: 0 0 $size;
+                }
+            }
+        }
+    }
+
+    /*
+     * -------------------------------------------------------------------------
+     * Offsets.
+     * -------------------------------------------------------------------------
+     */
+    @for $i from 1 through $column-count {
+        &--offset-#{$i} {
+            margin: 0;
+            margin-left: ($i / $column-count) * 100%;
+        }
+    }
+
     @each $label, $width in $viewport-min-widths {
         @for $i from 1 through $column-count {
             @include viewport-min($label) {
                 &--#{$label}-offset-#{$i} {
-                    @include column-offset($i, $column-count);
+                    margin: 0;
+                    margin-left: ($i / $column-count) * 100%;
+                }
+            }
+        }
+    }
+
+    /*
+     * -------------------------------------------------------------------------
+     * Offsets based on row direction modifiers.
+     * -------------------------------------------------------------------------
+     */
+    @at-root {
+        $flows: (
+            column: top,
+            column-reverse: bottom,
+        );
+
+        @each $flow, $direction in $flows {
+            .#{$ROW}--direction-#{$flow} {
+                @for $i from 1 through $column-count {
+                    .#{$COLUMN}--offset-#{$i} {
+                        margin: 0;
+                        margin-#{map-get($flows, $flow)}: ($i / $column-count) * 100%;
+                    }
+                }
+            }
+        }
+
+        @each $flow, $direction in $flows {
+            .#{$ROW}--direction-#{$flow} {
+                @each $label, $width in $viewport-min-widths {
+                    @include viewport-min($label) {
+                        @for $i from 1 through $column-count {
+                            .#{$COLUMN}--#{$label}-offset-#{$i} {
+                                margin: 0;
+                                margin-#{map-get($flows, $flow)}: ($i / $column-count) * 100%;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    /*
+     * -------------------------------------------------------------------------
+     * Text alignment.
+     * -------------------------------------------------------------------------
+     */
+    $text-alignments: left right center justify;
+    
+    @each $alignment in $text-alignments {
+        &--text-#{$alignment} {
+            text-align: $alignment;
+        }
+    }
+
+    @each $label, $width in $viewport-min-widths {
+        @include viewport-min($label) {
+            @each $alignment in $text-alignments {
+                &--#{$label}-text-#{$alignment} {
+                    text-align: $alignment;
                 }
             }
         }
