Fix up comments and spacing.

--- a/src/core/column/column.scss
+++ b/src/core/column/column.scss
@@ -2,11 +2,12 @@
     flex: 1;
     display: none;
 
-    /*
-     * -------------------------------------------------------------------------
-     * Visibility.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Visibility.
+    // -------------------------------------------------------------------------
+    //
+
     &--visible {
         display: block;
     }
@@ -19,11 +20,12 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Column sizing.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Column sizing.
+    // -------------------------------------------------------------------------
+    //
+
     @for $i from 1 through $column-count {
         &--#{$i} {
             flex: 0 0 (($i / $column-count) * 100%);
@@ -40,11 +42,11 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Named column sizing.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Named column sizing.
+    // -------------------------------------------------------------------------
+    //
 
     $named-sizes: (
         half: 50%,
@@ -70,11 +72,12 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Offsets.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Offsets.
+    // -------------------------------------------------------------------------
+    //
+
     @for $i from 1 through $column-count {
         &--offset-#{$i} {
             margin: 0;
@@ -93,11 +96,12 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Offsets based on row direction modifiers.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Offsets based on row direction modifiers.
+    // -------------------------------------------------------------------------
+    //
+
     @at-root {
         $flows: (
             column: top,
@@ -131,13 +135,14 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Text alignment.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Text alignment.
+    // -------------------------------------------------------------------------
+    //
+
     $text-alignments: left right center justify;
-    
+
     @each $alignment in $text-alignments {
         &--text-#{$alignment} {
             text-align: $alignment;
