--- a/src/core/layout/layout.scss
+++ b/src/core/layout/layout.scss
@@ -5,11 +5,12 @@
     max-width: $layout_max_width;
     overflow: hidden;
 
-    /*
-     * -------------------------------------------------------------------------
-     * Edges.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Edges.
+    // -------------------------------------------------------------------------
+    //
+
     &--edges {
         overflow: auto;
 
@@ -32,11 +33,12 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Breakaways.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Breakaways.
+    // -------------------------------------------------------------------------
+    //
+
     &--breakaway {
         margin-bottom: $gutter-width;
     }
