--- a/src/core/row/row.scss
+++ b/src/core/row/row.scss
@@ -7,11 +7,12 @@
     padding-left: $half-gutter-width;
     padding-right: $half-gutter-width;
 
-    /*
-     * -------------------------------------------------------------------------
-     * Gutters.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Gutters.
+    // -------------------------------------------------------------------------
+    //
+
     &--gutters {
         margin-bottom: -$gutter-width;
         padding-left: 0rem;
@@ -42,11 +43,12 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Breaks.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Breaks.
+    // -------------------------------------------------------------------------
+    //
+
     &--breaks {
         margin-bottom: $gutter-width;
     }
@@ -71,13 +73,14 @@
         }
     }
 
-    /*
-     * -------------------------------------------------------------------------
-     * Flow direction.
-     * -------------------------------------------------------------------------
-     */
+    //
+    // -------------------------------------------------------------------------
+    // Flow direction.
+    // -------------------------------------------------------------------------
+    //
+
     $flows: row row-reverse column column-reverse;
-    
+
     @each $flow in $flows {
         &--direction-#{$flow} {
             flex-direction: $flow;
