--- a/src/column/column.size.modifiers.scss
+++ b/src/column/column.size.modifiers.scss
@@ -7,12 +7,16 @@
         // These will apply at all viewport sizes.
         @include modifier('#{$i}') {
             flex: 0 0 (($i / $column-count) * 100%);
+            width: (($i / $column-count) * 100%);
+            max-width: (($i / $column-count) * 100%);
         }
     }
 
     @for $i from 1 through $column-count {
         @include modifier('xs-#{$i}') {
             flex: 0 0 (($i / $column-count) * 100%);
+            width: (($i / $column-count) * 100%);
+            max-width: (($i / $column-count) * 100%);
         }
     }
 
@@ -22,6 +26,8 @@
         @include viewport-exact($size) {
             @include modifier('#{$size}-#{$i}-only') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -32,6 +38,8 @@
         @include viewport-min($size) {
             @include modifier('#{$size}-#{$i}') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -42,6 +50,8 @@
         @include viewport-exact($size) {
             @include modifier('#{$size}-#{$i}-only') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -52,6 +62,8 @@
         @include viewport-min($size) {
             @include modifier('#{$size}-#{$i}') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -62,6 +74,8 @@
         @include viewport-exact($size) {
             @include modifier('#{$size}-#{$i}-only') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -72,6 +86,8 @@
         @include viewport-min($size) {
             @include modifier('#{$size}-#{$i}') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -82,6 +98,8 @@
         @include viewport-exact($size) {
             @include modifier('#{$size}-#{$i}-only') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -92,6 +110,8 @@
         @include viewport-min($size) {
             @include modifier('#{$size}-#{$i}') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
@@ -102,6 +122,8 @@
         @include viewport-exact($size) {
             @include modifier('#{$size}-#{$i}-only') {
                 flex: 0 0 (($i / $column-count) * 100%);
+                width: (($i / $column-count) * 100%);
+                max-width: (($i / $column-count) * 100%);
             }
         }
     }
