Add addition width properties for IE11 support etc.

--- a/src/core/column/column.scss
+++ b/src/core/column/column.scss
@@ -37,6 +37,8 @@
             @include viewport-min($label) {
                 &--#{$label}-#{$i} {
                     flex: 0 0 (($i / $column-count) * 100%);
+                    width: (($i / $column-count) * 100%);
+                    max-width: (($i / $column-count) * 100%);
                 }
             }
         }
@@ -59,6 +61,8 @@
     @each $name, $size in $named-sizes {
         &--#{$name} {
             flex: 0 0 $size;
+            width: $size;
+            max-width: $size;
         }
     }
 
@@ -67,6 +71,8 @@
             @each $name, $size in $named-sizes {
                 &--#{$label}-#{$name} {
                     flex: 0 0 $size;
+                    width: $size;
+                    max-width: $size;
                 }
             }
         }
